--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-async-storage/async-storage": "1.13.0",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
@@ -25,7 +25,10 @@
     "react-native": "0.68.2",
     "react-native-canvas": "^0.1.38",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^4.12.1",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
